--- a/src/app.css
+++ b/src/app.css
@@ -20,7 +20,7 @@ body {
 
     --text-base: 14.5px;
     --bg-base: #F0F4F8;
-    --hover: #D9E2EC;
+    --hover: #e5ebf2;
     --border: #9fb3c876;
 }
 
